# ComputationHumanities

./: Cargo.toml
data/: dataset-ar.json  dataset-de.json  dataset-en.json  dataset-es.json  dataset-fi.json  dataset-fr.json  dataset-ga.json  dataset-hi.json  dataset-hu.json  dataset-id.json  dataset-it.json  dataset-ja.json  dataset-ko.json  dataset-nl.json  dataset-pl.json  dataset-pt.json  dataset-ru.json  dataset-sv.json  dataset-tr.json  dataset-uk.json  dataset-vi.json  dataset-zh.json
src/: data.rs  libre_translate.rs  main.rs  n_gram.rs
