[package]
name = "ueb_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="*"
serde="*"
serde_derive="*"
serde_json = "*"
futures="*"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes", "tokio1"]